--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+<html>
+    <form method="POST" action'/checkout'>
+        <p>item <input type="text" name="item"></p>
+        <input id="submit" type="submit" value="submit"
+    </form>
+</html>
